fix: Added z-index by default to container.

--- a/packages/estimtest-core/src/styles/utils.scss
+++ b/packages/estimtest-core/src/styles/utils.scss
@@ -4,6 +4,7 @@
   height: 100%;
   top: 0rem;
   pointer-events: none;
+  z-index: 1000;
 }
 
 .full-width {
